# Duel-Master

./: .env  .env.development  .env.production  .gitignore  .prettierrc.json  API.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
backend/: .env  .env.example  .gitignore  app.py  mypy.ini  pyproject.toml  requirements.txt
backend/assets/card-material/: README.md
backend/model/: LICENSE  README.md
backend/scripts/: freeze-requirements.bat  freeze-requirements.sh  freeze.bat  run-backend-pip.bat  run-backend-pip.sh  run-backend.bat  run-backend.sh  run.bat
backend/src/: constants.py  shared_types.py  utils.py
backend/src/card/: __init__.py  image.py  text_extractor.py  translation.py  translation_pipeline.py  translator.py
backend/src/image/: card_image.py  user_image.py
backend/src/utils/: log.py  misc.py
doc/: tech-doc.md
frontend/: .env  .env.production  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  all.css  config.ts  main.ts
frontend/src/api/: data.ts  getAxios.ts  question.ts  translation.ts
frontend/src/example/: koreaFish.ts  poorLabor.ts  rushDuel.ts  yugioh.ts  yugiohBack.ts  yugiohSeries2.ts
frontend/src/router/: index.ts
frontend/src/types/: index.ts  response.ts  ygoprodeck.ts
frontend/src/views/: ChatroomView.vue  HomeView.vue
frontend/types/yugioh-card/: index.d.ts
scripts/: calc-line.bat  freeze-requirements.sh  run-backend-pip.bat  run-backend-pip.sh  run-backend.bat  run-backend.sh
src/: all.css  config.ts
src/api/: getAxios.ts  question.ts  translation.ts
src/components/button/: BoxButton.vue  FillUploadBoxButton.vue  PosBoxButton.vue  UploadButton.vue
src/components/canvas-card/: CanvasCard.vue
src/components/chat-room/: ChatContainer.vue  ChatInput.vue  ChatMessage.vue  ChatMessageList.vue  Sidebar.vue  SidebarHeader.vue  SidebarItem.vue
src/components/icon/: AddIcon.vue  CloseIcon.vue  MenuIcon.vue  PenIcon.vue  UploadIcon.vue
src/components/lordicon/: PenIcon.vue  SendIcon.vue  UploadIcon.vue
src/components/misc/: Avatar.vue
src/example/: fieldCenter.ts  yugiohBack.ts
src/types/: index.ts
src/views/: HomeView.vue
types/yugioh-card/: index.d.ts
(+60 files in other folders)
