[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["RogelioKG <rogeliokg0813@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^5.0.0"
requests = "^2.32.3"
azure-cognitiveservices-vision-computervision = "^0.9.1"
transformers = "^4.47.1"
torch = {version = "^2.6.0+cu124", source = "pytorch-cu124"}

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
